--- a/backend/package.json
+++ b/backend/package.json
@@ -24,12 +24,15 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.3.8",
     "@prisma/client": "^5.6.0",
     "axios": "^1.6.3",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "ejs": "^3.1.10",
     "fs-extra": "^11.2.0",
+    "handlebars": "^4.7.8",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "puppeteer": "^22.7.1",
